@@ -198,6 +198,19 @@ else {
 					</td>
 				</tr>
 				<tr>
+					<td> 
+						<b><?php print _('Roll Order') ?></b><br/>
+						<span style="font-size: 90%"><i><?php print _('Must be unique to roll gorup if set.') ?></i></span>
+					</td>
+					<td class="right">
+						<input name="rollOrder" id="rollOrder" maxlength=2 value="" type="text" style="width: 300px">
+						<script type="text/javascript">
+							var rollOrder=new LiveValidation('rollOrder');
+							rollOrder.add(Validate.Numericality);
+						</script>
+					</td>
+				</tr>
+				<tr>
 					<td>
 						<span style="font-size: 90%"><i>* <?php print _("denotes a required field") ; ?></i></span>
 					</td>
